--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mark Vayngrib <mark@tradle.io> (http://github.com/mvayngrib)",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "protocol-buffers": "^3.1.6"
+  }
 }
